# wallet-hd-derivation-kit

./: .gitignore  .pubignore  .spi.yml  AGENTS.md  AUDIT_CHECKLIST.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  Dockerfile  FUZZING.md  LAUNCH_CHECKLIST.md  OFFLINE.md  PRIVATE_MATERIAL.md  Package.resolved  Package.swift  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  WalletHDDerivationKit.podspec  analysis_options.yaml  build.gradle.kts  codemeta.json  go.mod  go.sum  gradle.lockfile  gradle.properties  install.ps1  install.sh  jitpack.yml  jsr.json  llms-full.txt  llms.txt  osv-scanner.toml  package-lock.json  package.json  pubspec.yaml  pyproject.toml  (+3 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  consumer-install.yml  nightly.yml  offline.yml  pages.yml  release.yml  search-indexing.yml  security.yml
Formula/: wallethd.rb
Sources/WalletHDConformance/: main.swift
Sources/WalletHDDerivationKit/: RIPEMD160.swift  WalletHDDerivationKit.swift
Tests/CocoaPods/: WalletHDDerivationKitPodTests.swift
Tests/WalletHDDerivationKitTests/: WalletHDDerivationKitTests.swift
benchmarks/: baseline.json
cmd/conformance/: main.go
docs/: _config.yml  benchmarks.md  chains.md  cli.md  comparisons.md  dart.md  flutter.md  go.md  index.md  javascript.md  kotlin.md  launch.md  migration.md  python.md  react-native.md  robots.txt  rust.md  security.md  sitemap.xml  swift.md  test-vectors.md  threat-model.md
docs/_layouts/: default.html
docs/schema/: v1.json
example/: main.dart
examples/cli/: example.sh
examples/dart/: pubspec.yaml
examples/flutter/: pubspec.yaml
examples/flutter/lib/: main.dart
examples/flutter/test/: widget_test.dart
examples/go/: go.mod  go.sum  main.go
examples/javascript/: example.mjs
examples/kotlin/: build.gradle.kts  settings.gradle.kts
examples/kotlin/src/main/kotlin/example/: Main.kt
examples/python/: example.py
examples/react-native/: App.tsx  smoke-test.mjs
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/swift/: Package.resolved  Package.swift
examples/swift/Sources/WalletHDExample/: main.swift
fuzz/: Cargo.toml
fuzz/fuzz_targets/: derive_address.rs  parse_extended_key.rs  parse_path.rs
javascript/src/: address.js  bip32.js  chains.js  index.d.ts  index.js  react-native.js  slip10.js  utils.js
javascript/test/: conformance-runner.mjs  conformance.test.js
kotlin/src/main/kotlin/io/github/devdasx/wallethd/: Conformance.kt  WalletHDDerivationKit.kt
lib/: wallet_hd_derivation_kit.dart
marketing/: GITHUB_DISCUSSION.md  HACKER_NEWS_DRAFT.md  LINKEDIN_DRAFT.md  REDDIT_DRAFT.md  X_DRAFT.md
python/tests/: conformance_runner.py  test_conformance.py
python/wallet_hd_derivation_kit/: __init__.py  core.py
rust/src/: lib.rs  main.rs
scripts/: benchmark.mjs  check-versions.mjs  conformance.mjs  verify-all.sh
spec/: api-schema-v1.json  chains.json
test/: wallet_hd_derivation_kit_test.dart
test-vectors/: bip32-official.json  public-vectors.json  slip10-ed25519-official.json
tool/: conformance.dart
(+1 files in other folders)
