[package]
name = "wallet-hd-derivation-kit"
version = "1.0.0"
edition = "2021"
rust-version = "1.92"
description = "Offline multi-chain HD wallet derivation and wallethd CLI"
license = "MIT"
repository = "https://github.com/devdasx/wallet-hd-derivation-kit"
homepage = "https://devdasx.github.io/wallet-hd-derivation-kit/"
readme = "README.md"
keywords = ["bip32", "hd-wallet", "xpub", "bitcoin", "solana"]
categories = ["cryptography", "command-line-utilities"]
include = [
  "/Cargo.toml",
  "/Cargo.lock",
  "/rust/src/**/*.rs",
  "/README.md",
  "/LICENSE",
  "/SECURITY.md",
  "/test-vectors/*.json"
]

[lib]
path = "rust/src/lib.rs"

[[bin]]
name = "wallethd"
path = "rust/src/main.rs"

[[bin]]
name = "conformance"
path = "rust/src/bin/conformance.rs"

[dependencies]
bip39 = "=2.2.2"
bs58 = { version = "=0.5.1", features = ["check"] }
clap = { version = "=4.6.1", features = ["derive"] }
clap_complete = "=4.6.7"
ed25519-dalek = "=2.2.0"
hex = "=0.4.3"
hmac = "=0.12.1"
k256 = { version = "=0.14.0", features = ["arithmetic"] }
ripemd = "=0.1.3"
rpassword = "=7.5.4"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.9"
sha3 = "=0.10.9"
thiserror = "=2.0.18"
zeroize = { version = "=1.9.0", features = ["derive"] }

[dev-dependencies]
proptest = "=1.11.0"
