[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "wallet-hd-derivation-kit"
version = "1.0.0"
description = "Offline multi-chain HD wallet derivation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ROYO STUDIOS", email = "royostudios13@gmail.com" }]
keywords = ["bip32", "bip39", "hd-wallet", "xpub", "cryptocurrency"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security :: Cryptography"
]
dependencies = [
  "coincurve==21.0.0",
  "mnemonic==0.21",
  "PyNaCl==1.6.2",
  "pycryptodome==3.23.0"
]

[project.urls]
Homepage = "https://devdasx.github.io/wallet-hd-derivation-kit/"
Repository = "https://github.com/devdasx/wallet-hd-derivation-kit"
Documentation = "https://devdasx.github.io/wallet-hd-derivation-kit/python/"
Issues = "https://github.com/devdasx/wallet-hd-derivation-kit/issues"

[tool.hatch.build.targets.wheel]
packages = ["python/wallet_hd_derivation_kit"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]

[project.optional-dependencies]
dev = ["pytest==9.1.1", "pytest-cov==7.0.0", "ruff==0.14.10", "mypy==1.19.1", "build==1.5.1"]
